# drama-engine

./: .gitignore  AI精品短剧创作引擎_Specs.md  README.md  _drama-engine_config.yaml  config.example.yaml  config.yaml  convert_to_word.py  pyproject.toml  requirements.txt
examples/: __init__.py  bai_tie_dye_config.yaml
knowledge/culture/: 中华优秀传统文化知识库_V1.2.md
knowledge/experts/: character_forger.md  compliance_guard.md  dialogue_master.md  drama_evaluator.md  episode_outline_reviewer.md  project_configurator.md  script_reviewer.md  soul_catcher.md  structure_architect.md  visual_director.md
src/: pipeline_orchestrator.py
src/api/: cli.py  cli.py.bak  server.py
src/config/: settings.py
src/engine/: __init__.py  rules.py  scorer.py  type_adapter.py
src/experts/: base.py  character_forger.py  compliance_guard.py  dialogue_master.py  episode_outline_reviewer.py  episode_writer.py  script_reviewer.py  visual_director.py
src/export/: __init__.py  final_assembler.py
src/knowledge/: culture_kb.py
src/workflow/: orchestrator.py
tests/: _drama-engine_tests_test_scorer.py  test_culture_kb.py  test_orchestrator.py  test_rules.py
